fix: disable word wrapping and add padding to banner CTA container

--- a/src/components/Banner/Banner.sass
+++ b/src/components/Banner/Banner.sass
@@ -68,6 +68,8 @@
 
 	.CTA_Container
 		margin-left: auto
+		white-space: nowrap
+		padding-left: 10px
 
 	.CTA
 		right: 10px
